[package]
name = "code_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18.1", features = ["derive"] }
actix-web-validator = "5.0.1"
strum = "0.26.2"
strum_macros = "0.26.2"
